--- a/src/assets/PlayerStats.scss
+++ b/src/assets/PlayerStats.scss
@@ -1,11 +1,21 @@
 .stats {
   &__rangeInputs {
     grid-area: range;
-  }
-  &__rangeInputs {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    gap: 30px;
+    h3 {
+      font-size: 24px;
+    }
   }
+  &__fromTo {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+}
+label {
+  font-weight: bold;
 }
