--- a/src/assets/GlobalStyles.scss
+++ b/src/assets/GlobalStyles.scss
@@ -35,3 +35,16 @@ ul {
   padding: 0;
   margin: 0;
 }
+
+input {
+  height: 35px;
+  background-color: #f4f8fa;
+  padding-left: 15px;
+  border: none;
+  border-radius: 5px;
+
+  &:focus {
+    border-color: rgb(46, 133, 224);
+    border-bottom: 1px solid rgb(46, 133, 224);
+  }
+}
