--- a/src/assets/PlayerListView.scss
+++ b/src/assets/PlayerListView.scss
@@ -24,17 +24,16 @@
     display: flex;
     flex-direction: column;
     min-width: 400px;
-    //justify-content: space-around;
   }
   &__search {
     display: flex;
-    gap: 10px;
+    gap: 20px;
     justify-content: space-around;
     align-items: center;
     height: 60px;
     align-self: start;
     justify-self: start;
-    margin-left: 20px;
+    margin-left: 30px;
   }
   &__playerList {
     overflow-y: auto;
@@ -47,10 +46,16 @@
     margin-left: 40px;
     max-height: 700px;
     min-height: 700px;
+    &:last-child {
+      border-bottom: none;
+    }
   }
   &__item {
     border-bottom: 1px solid grey;
     line-height: 1.6;
+    &:last-child {
+      border-bottom: none;
+    }
   }
   &__moveButtonsContainer {
     justify-content: end;
