--- a/src/assets/PlayerListView.scss
+++ b/src/assets/PlayerListView.scss
@@ -1,13 +1,12 @@
 .mainHeader {
-  height: 5vh;
+  height: 8vh;
   width: 100%;
-
   display: flex;
   align-items: center;
   justify-content: start;
 
   h1 {
-    margin-left: 40px;
+    margin-left: 60px;
     font-size: 40px;
     color: rgb(46, 133, 224);
   }
@@ -24,6 +23,7 @@
     display: flex;
     flex-direction: column;
     min-width: 400px;
+    gap: 25px;
   }
   &__search {
     display: flex;
@@ -31,11 +31,16 @@
     justify-content: space-around;
     align-items: center;
     height: 60px;
-    align-self: start;
+    align-self: center;
     justify-self: start;
     margin-left: 30px;
+
+    input {
+      width: 150px;
+    }
   }
   &__playerList {
+    margin-left: 40px;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
@@ -43,9 +48,7 @@
     align-items: start;
     font-size: 24px;
     letter-spacing: 2px;
-    margin-left: 40px;
-    max-height: 700px;
-    min-height: 700px;
+    height: 600px;
     &:last-child {
       border-bottom: none;
     }
