--- a/src/assets/PlayerSpecificData.scss
+++ b/src/assets/PlayerSpecificData.scss
@@ -1,7 +1,7 @@
-.chartsContainer {
-  display: flex;
-  flex-direction: row;
-  grid-area: charts;
-  width: 1300px;
-  justify-content: space-around;
-}
+//.chartsContainer {
+//  display: flex;
+//  flex-direction: row;
+//  grid-area: charts;
+//  width: 1300px;
+//  justify-content: space-around;
+//}
